[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solana-version-checker"
version = "1.0.0"
description = "GitHub Action to check and update Solana version in deployment files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["action*"]
namespaces = false

[project.optional-dependencies]
test = ["pytest"]